tests/baselines/reference/genericDerivedTypeWithSpecializedBase.errors.txt
tests/cases/compiler/genericDerivedTypeWithSpecializedBase.ts(11,1): error TS2322: Type 'B<数字>' is not assignable to type 'A<数字>'.
  Types of property 'x' are incompatible.
    Type '文字' is not assignable to type '数字'.


==== tests/cases/compiler/genericDerivedTypeWithSpecializedBase.ts (1 errors) ====
    class A<T> {
        x: T;
    }
    
    class B<U> extends A<string> {
        y: U;
    }
    
    var x: A<number>;
    var y: B<number>;
    x = y;  // error
    ~
!!! error TS2322: Type 'B<数字>' is not assignable to type 'A<数字>'.
!!! error TS2322:   Types of property 'x' are incompatible.
!!! error TS2322:     Type '文字' is not assignable to type '数字'.
    